# GraphicsPlayground

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  CompilerWarnings.cmake  Dockerfile  README.md  compile_shaders.sh  main.cpp
.github/actions/Docker-CI/: 10-headless.conf  DockerEntrypoint.sh  Dockerfile  action.yml
.github/workflows/: ClangFormat.yml  ClangTidy.yml  Dockerfile  cmake.yml
hellovulkanwidget/: MainGUI.ui  hellovulkanwidget.cpp  hellovulkanwidget.h  main.cpp
include/: Header.hpp  VulkanApplication.hpp  VulkanRenderer.hpp  VulkanSwapChain.hpp
newRenderer/: CMakeLists.txt  Drawable.cpp  Drawable.hpp  RendererBase.cpp  RendererBase.hpp  VulkanDisplay.cpp  VulkanDisplay.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
renderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Drawable.cpp  Drawable.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RendererBase.cpp  RendererBase.hpp  Scene.cpp  Scene.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VulkanDisplay.cpp  VulkanDisplay.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
renderer/include/: Header.hpp  VulkanApplication.hpp  VulkanDescriptor.hpp  VulkanRenderer.hpp  VulkanSwapChain.hpp
renderer/source/: VulkanApplication.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp
shaders/: CMakeLists.txt  DrawTriangle.vert  DrawTriangleMonochrome.frag  DrawTriangleMonochrome.vert
shared/: trianglerenderer.cpp
source/: VulkanApplication.cpp  VulkanDrawable.cpp  VulkanInstance.cpp  VulkanLayerAndExtension.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp  main.cpp
test/: CMakeLists.txt  RendererTestBasic.cpp  UITestBasic.cpp  UITestMain.cpp
ui/: CMakeLists.txt  MainGUI.ui  MainWindow.cpp  MainWindow.h  main.cpp
